# mcp-server-buildium

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mockapi  Makefile  README.md  docker-compose.yml  mockapi.db  mockapi2.db  openapi.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: security-and-audit.md  tool-coverage.md
extension/: .gitignore  README.md  config.defaults.example.json  package-lock.json  package.json
extension/scripts/: build.mjs
extension/src/: artifactUrls.js  attachments.js  auth.js  background.js  background_notifications.js  browser.js  chatState.js  config.baked.js  config.js  downloads.js  errors.js  llm.js  management.js  manifest.base.json  manifest.chrome.json  manifest.firefox.json  markdown.js  mcpClient.js  notificationCenter.js  options.css  options.html  options.js  pkce.js  sidepanel.css  sidepanel.html  sidepanel.js  sidepanel_attachments.js  sidepanel_downloads.js  sidepanel_ui.js
extension/tests/: artifactUrls.test.js  attachments.test.js  auth.test.js  build.test.js  chatState.test.js  config.test.js  downloads.test.js  integration.test.js  llm.test.js  management.test.js  markdown.test.js  mcpClient.test.js  notificationCenter.test.js  pkce.test.js  sidepanel_ui.test.js
mockapi/: __init__.py  __main__.py  app.py  db.py  seed.py  store.py
scripts/: generate_audit_report.py  generate_tool_coverage.py
specs/: README.md
src/mcp_server_buildium/: audit.py  auth.py  buildium_client.py  chat_endpoint.py  config.py  entra_graph.py  logging_config.py  management_endpoint.py  sdk_imports.py  server.py
src/mcp_server_buildium/llm/: __init__.py  admin_page.py  agent.py  artifacts.py  attachments.py  base.py  config_store.py  providers.py  router.py
src/mcp_server_buildium/security/: __init__.py  policy.py  registration.py  scoping.py
src/mcp_server_buildium/tools/: _common.py  _money.py  alerts.py  analytics.py  applicants.py  associations.py  bank_accounts.py  bills.py  budgets.py  close.py  communications.py  distributions.py  documents.py  email.py  files.py  general_ledger.py  intelligence.py  leases.py  owners.py  ownership_accounts.py  reference.py  rentals.py  reports.py  tasks.py  tenants.py  units.py  vendors.py  work_orders.py
tests/: test_analytics.py  test_artifacts.py  test_attachments.py  test_audit.py  test_auth.py  test_chat_endpoint.py  test_close_reports_alerts.py  test_common_envelope.py  test_config.py  test_config_llm.py  test_config_security.py  test_distributions.py  test_documents_tools.py  test_e2e_mock.py  test_email.py  test_http_transport.py  test_intelligence.py  test_leases_enrich.py  test_llm_agent.py  test_llm_config_store.py  test_llm_providers.py  test_llm_router.py  test_management.py  test_money.py  test_new_tools.py  test_policy.py  test_registration_guard.py  test_scoping.py  test_tenant_updates.py  test_tool_spec_coverage.py  test_update_merge.py
