[project]
name = "mcp-server-buildium"
version = "0.1.0"
description = "Buildium MCP Server with FastMCP - API key header authentication"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Luther Systems", email = "info@luthersystems.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "buildium", "property-management", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Pin a secure floor: fastmcp < 2.14.0 ships MCP < 1.23 (CVE-2025-66416) and
    # < 2.14.2 is affected by an OAuth Proxy token-reuse advisory. Stay on the
    # 2.x line (the 3.x series changes the FastMCP tool API this server relies
    # on). The OAuth Proxy / OpenAPI advisories fixed only in 3.2.0 do not apply
    # here because this server uses neither of those FastMCP features.
    "fastmcp>=2.14.2,<3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "urllib3>=1.25.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]
mockapi = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
mcp-server-buildium = "mcp_server_buildium.server:main"
mcp-server-buildium-mockapi = "mockapi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_buildium", "mockapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=mcp_server_buildium",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["src/mcp_server_buildium/buildium_sdk"]  # Exclude generated SDK from linting

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

